@@ -13,6 +13,9 @@ Version 2.9.3
   intended behavior in all situations however it does not restore the
   old behavior where limited assignments to outer scopes was possible.
   For more information and a discussion see #641
+- Resolved an issue where `block scoped` would not take advantage of the
+  new scoping rules.  In some more exotic cases a variable overriden in a
+  local scope would not make it into a block.
 
 Version 2.9.2
 -------------
